--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -360,12 +360,12 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   margin-bottom: 10px;
 }
 .paso_02a .cont_direccion .direccion_op1 .dir_locales .cont_local {
+  width: 100%;
+  height: 80px;
   position: relative;
 }
 .paso_02a .cont_direccion .direccion_op1 .dir_locales .cont_local .local_info {
-  display: block;
-  width: calc(100% - 70px);
-  padding: 20px 15px;
+  left: 10px;
 }
 .paso_02a .cont_direccion .direccion_op1 .dir_locales .cont_local .local_info .alert {
   color: #D00;
@@ -373,10 +373,10 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   display: none;
 }
 .paso_02a .cont_direccion .direccion_op1 .dir_locales .cont_local .local_mapa {
-  right: 0px;
   width: 30px;
   height: 30px;
-  padding: 10px;
+  right: 10px;
+  background: #ccc;
 }
 .paso_02a .cont_direccion .direccion_op1 .dir_locales .cont_local .local_mapa .icon_mapa {
   width: 30px;
