--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -362,7 +362,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 }
 .paso_02a .cont_direccion .direccion_op1 .dir_locales .cont_local {
   width: 100%;
-  height: 100px;
+  height: 120px;
   position: relative;
 }
 .paso_02a .cont_direccion .direccion_op1 .dir_locales .cont_local .local_info {
@@ -372,6 +372,11 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   color: #D00;
   font-size: 13px;
   display: none;
+}
+.paso_02a .cont_direccion .direccion_op1 .dir_locales .cont_local .local_info .ver_mapa {
+  background: #999;
+  padding: 5px;
+  color: #fff;
 }
 .paso_02a .cont_direccion .direccion_op1 .dir_locales .cont_local .local_mapa .icon_mapa {
   width: 30px;
