--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -377,6 +377,10 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   background: #999;
   padding: 5px;
   color: #fff;
+  width: 75px;
+  font-size: 14px;
+  text-align: center;
+  margin-top: 6px;
 }
 .paso_02a .cont_direccion .direccion_op1 .dir_locales .cont_local .local_mapa .icon_mapa {
   width: 30px;
