--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -36,13 +36,13 @@ body .contenedor .pagina .cont_pagina .contenido .cont_contenido .botones_princi
 body .contenedor .modals {
   background: rgba(0, 0, 0, 0.75);
 }
-body .contenedor .modals .cont_modals .modal {
+body .contenedor .modals .cont_modals .modal_dim1 {
   width: 90%;
   height: 90%;
   max-width: 400px;
   max-height: 580px;
 }
-body .contenedor .modals .cont_modals .modal_err {
+body .contenedor .modals .cont_modals .modal_dim2 {
   width: 90%;
   height: 90%;
   max-width: 400px;
