--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -278,10 +278,21 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 }
 .modal_error .cont_modal .cont_info .cont_err .cont_ab_err .btns_err{
   display: block;
+  width: 260px;
+  margin: 0 auto;
 }
 .modal_error .cont_modal .cont_info .cont_err .cont_ab_err .btns_err .btn_err{
-  width: 150px;
+  width: 130px;
+  float: left;
+  color: #fff;
+  padding: 10px 5px;
+  font-size: 16px;
+}
+.modal_error .cont_modal .cont_info .cont_err .cont_ab_err .btns_err .btn_err1{
   background: #900;
+}
+.modal_error .cont_modal .cont_info .cont_err .cont_ab_err .btns_err .btn_err2{
+  background: #090;
 }
 .paso_01 .process_carro {
   padding: 10px;
