--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -282,7 +282,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   margin: 0 auto;
 }
 .modal_error .cont_modal .cont_info .cont_err .cont_ab_err .btns_err .btn_err{
-  width: 130px;
+  width: 128px;
   float: left;
   color: #fff;
   padding: 10px 5px;
@@ -290,9 +290,11 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 }
 .modal_error .cont_modal .cont_info .cont_err .cont_ab_err .btns_err .btn_err1{
   background: #900;
+  margin-right: 2px;
 }
 .modal_error .cont_modal .cont_info .cont_err .cont_ab_err .btns_err .btn_err2{
   background: #090;
+  margin-left: 2px;
 }
 .paso_01 .process_carro {
   padding: 10px;
