--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -289,6 +289,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   font-size: 14px;
   text-decoration: none;
   border-radius: 6px;
+  text-align: center;
 }
 .modal_error .cont_modal .cont_info .cont_err .cont_ab_err .btns_err .btn_err1{
   background: #900;
