--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -416,7 +416,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   left: 10px;
   width: calc(100% - 60px);
 }
-.cont_direccion .direccion_op1 .dir_locales .cont_local .acciones {
+.cont_direccion .direccion_op1 .dir_locales .cont_local .accioness {
   right: 10px;
   width: 30px;
 }
