--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -415,6 +415,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 .cont_direccion .direccion_op1 .dir_locales .cont_local .local_info {
   left: 10px;
   width: calc(100% - 60px);
+  padding: 28px 0px;
 }
 .cont_direccion .direccion_op1 .dir_locales .cont_local .accioness {
   right: 10px;
@@ -425,6 +426,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   width: 30px;
   background: #f00;
   display: block;
+  margin: 1px 0px;
 }
 .cont_direccion .direccion_op1 .dir_locales .cont_local .local_info .alert {
   color: #D00;
