--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -124,7 +124,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   background-size: cover;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoria .cont_fondo {
-  padding: 13px;
+  /*padding: 13px;*/
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoria .cont_fondo .nombre {
   font-size: 24px;
