--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -40,7 +40,7 @@ body .contenedor .modals .cont_modals .modal_dim1 {
   width: 98%;
   height: 98%;
   max-width: 400px;
-  max-height: 600px;
+  /*max-height: 600px;*/
 }
 body .contenedor .modals .cont_modals .modal_dim2 {
   width: 98%;
