--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -398,11 +398,11 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 }
 .cont_direccion .direccion_op1 .dir_locales {
   margin-bottom: 10px;
-  background: #ddd;
+  background-size: cover;
 }
 .cont_direccion .direccion_op1 .dir_locales .cont_local {
   width: 100%;
-  height: 120px;
+  height: 100%;
   position: relative;
 }
 .cont_direccion .direccion_op1 .dir_locales .dir_map {
