--- a/css/css_fontsize_01.css
+++ b/css/css_fontsize_01.css
@@ -1,3 +1,4 @@
+/*
 body .contenedor .menu_left .cont_menu_left .menu_info h1 {
   font-size: 24px;
 }
@@ -109,7 +110,105 @@ body .contenedor .pagina .cont_pagina .contenido .cont_contenido .botones_princi
 .paso_03 .sub_total .cont_subtotal .total_detalle .paso_03_total {
   font-size: 28px;
 }
+*/
 
-/* MODALS */
-
-/*# sourceMappingURL=css_fontsize_01.css.map */
+@media only screen and (max-width: 400px) {
+  .font1{
+    font-size: 20px;
+  }
+  .font2{
+    font-size: 18px;
+  }
+  .font3{
+    font-size: 16px;
+  }
+  .font4{
+    font-size: 14px;
+  }
+  .font5{
+    font-size: 12px;
+  }
+  .font6{
+    font-size: 10px;
+  }
+}
+@media only screen and (min-width: 400px) {
+  .font1{
+    font-size: 20px;
+  }
+  .font2{
+    font-size: 18px;
+  }
+  .font3{
+    font-size: 16px;
+  }
+  .font4{
+    font-size: 14px;
+  }
+  .font5{
+    font-size: 12px;
+  }
+  .font6{
+    font-size: 10px;
+  }
+}
+@media only screen and (min-width: 600px) {
+  .font1{
+    font-size: 20px;
+  }
+  .font2{
+    font-size: 18px;
+  }
+  .font3{
+    font-size: 16px;
+  }
+  .font4{
+    font-size: 14px;
+  }
+  .font5{
+    font-size: 12px;
+  }
+  .font6{
+    font-size: 10px;
+  }
+}
+@media only screen and (min-width: 800px) {
+  .font1{
+    font-size: 20px;
+  }
+  .font2{
+    font-size: 18px;
+  }
+  .font3{
+    font-size: 16px;
+  }
+  .font4{
+    font-size: 14px;
+  }
+  .font5{
+    font-size: 12px;
+  }
+  .font6{
+    font-size: 10px;
+  }
+}
+@media only screen and (min-width: 1000px) {
+  .font1{
+    font-size: 20px;
+  }
+  .font2{
+    font-size: 18px;
+  }
+  .font3{
+    font-size: 16px;
+  }
+  .font4{
+    font-size: 14px;
+  }
+  .font5{
+    font-size: 12px;
+  }
+  .font6{
+    font-size: 10px;
+  }
+}
