--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -20,7 +20,7 @@ body .contenedor .pagina .cont_pagina .header .header_logo {
   /*height: 70px;*/
 }
 body .contenedor .pagina .cont_pagina .header .menu_right .shop {
-  
+  font-size: 36px;
 }
 body .contenedor .pagina .cont_pagina .contenido .cont_contenido {
   width: 94%;
