--- a/css/css_fontsize_01.css
+++ b/css/css_fontsize_01.css
@@ -125,6 +125,9 @@ body .contenedor .pagina .cont_pagina .contenido .cont_contenido .botones_princi
   .font4{
     font-size: 13px;
   }
+  .font5{
+    font-size: 11px;
+  }
 }
 @media only screen and (min-width: 400px){
   .font1{
@@ -138,6 +141,9 @@ body .contenedor .pagina .cont_pagina .contenido .cont_contenido .botones_princi
   }
   .font4{
     font-size: 14px;
+  }
+  .font5{
+    font-size: 11px;
   }
 }
 @media only screen and (min-width: 700px){
@@ -153,6 +159,9 @@ body .contenedor .pagina .cont_pagina .contenido .cont_contenido .botones_princi
   .font4{
     font-size: 15px;
   }
+  .font5{
+    font-size: 11px;
+  }
 }
 @media only screen and (min-width: 1000px){
   .font1{
@@ -166,5 +175,8 @@ body .contenedor .pagina .cont_pagina .contenido .cont_contenido .botones_princi
   }
   .font4{
     font-size: 16px;
+  }
+  .font5{
+    font-size: 11px;
   }
 }
