--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -200,7 +200,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   padding: 15px 0px 0px 0px;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .listado .prod_item {
-  padding-top: 2px;
+  padding-left: 10px;
 }
 
 .modal_productos_promo .cont_modal .cont_info .info_modal {
