--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -197,7 +197,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   right: 13px;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .listado {
-  padding: 15px 0px 0px 0px;
+  padding: 10px 0px;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .listado .prod_item {
   padding-left: 10px;
