--- a/css/css_colores_01.css
+++ b/css/css_colores_01.css
@@ -53,8 +53,13 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones {
 .modal_productos_promo .cont_modal .cont_info .info_modal .pro_cat_promo .pro_cat_item {
 
 }
+.modal_pregunta_productos .cont_modal .cont_info .info_modal .s_pregunta .e_pregunta .v_pregunta {
+  border-top: 1px solid #ccc;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+}
 .modal_pregunta_productos .cont_modal .cont_info .info_modal .s_pregunta .e_pregunta .v_pregunta .n_pregunta {
-  
+  border-bottom: 1px solid #ccc;
 }
 .modal_pregunta_productos .cont_modal .cont_info .info_modal .s_pregunta .e_pregunta .v_pregunta .selected {
   background: #ccc;
