--- a/css/css_colores_01.css
+++ b/css/css_colores_01.css
@@ -54,10 +54,10 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones {
 
 }
 .modal_pregunta_productos .cont_modal .cont_info .info_modal .s_pregunta .e_pregunta .v_pregunta {
-  
+  background: #f2f2f2;
 }
 .modal_pregunta_productos .cont_modal .cont_info .info_modal .s_pregunta .e_pregunta .v_pregunta .n_pregunta {
-  
+  background: #ccc;
 }
 .modal_pregunta_productos .cont_modal .cont_info .info_modal .s_pregunta .e_pregunta .v_pregunta .selected {
   background: #ccc;
