--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -246,7 +246,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   border-right: 1px solid #ccc;
 }
 .modal_pregunta_productos .cont_modal .cont_info .info_modal .s_pregunta .e_pregunta .v_pregunta .n_pregunta {
-  padding: 8px 10px;
+  padding: 10px;
   border-bottom: 1px solid #ccc;
 }
 .modal_pregunta_productos .cont_modal .cont_info .info_modal .s_pregunta .e_pregunta .titulo_v_pregunta {
