--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -317,10 +317,10 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 
 }
 .paso_01 .process_carro .process_carro_restantes {
-  padding: 6px;
+  padding: 20px 6px 10px 6px;
 }
 .paso_01 .process_carro .process_carro_restantes .restantes_detalle_item {
-  margin-bottom: 1px;
+  margin-bottom: 10px;
 }
 .paso_01 .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_nombre {
   width: calc(100% - 109px);
