--- a/css/css_base.css
+++ b/css/css_base.css
@@ -32,6 +32,9 @@ body .contenedor .cantcart {
 body .contenedor .categoria .cont_fondo {
   cursor: pointer;
 }
+body .contenedor .categoriaopen .listado .prod_item {
+  cursor: pointer;
+}
 body .contenedor .menu_left .cont_menu_left {
   width: 100%;
   height: 100%;
