--- a/css/css_base.css
+++ b/css/css_base.css
@@ -251,6 +251,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones {
 }
 .paso_01 .process_carro .process_carro_promo .promo_detalle .promo_detalle_item .promo_detalle_acciones {
   float: left;
+  cursor: pointer;
 }
 .paso_01 .process_carro .process_carro_promo .promo_detalle .promo_detalle_item .promo_detalle_acciones .accion {
   float: left;
@@ -264,6 +265,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones {
   right: 1px;
   width: 30px;
   height: 30px;
+  cursor: pointer;
 }
 .paso_01 .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_nombre {
   float: left;
