--- a/css/css_base.css
+++ b/css/css_base.css
@@ -275,12 +275,14 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones {
 }
 .paso_01 .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .accion {
   float: left;
+  cursor: pointer;
 }
 .paso_01 .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .precio {
   float: left;
 }
 .paso_01 .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .pregunta {
   float: left;
+  cursor: pointer;
 }
 .paso_01 .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .espacio {
   float: left;
