--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -330,16 +330,14 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   width: 115px;
 }
 .paso_01 .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .accion {
-  width: 19px;
-  margin-left: 1px;
+  width: 20px;
 }
 .paso_01 .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .precio {
-  width: 64px;
-  margin-left: 1px;
+  width: 65px;
+  text-align: right;
 }
 .paso_01 .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .pregunta {
-  width: 19px;
-  margin-left: 1px;
+  width: 20px;
 }
 .paso_01 .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .espacio {
   width: 20px;
