--- a/css/css_base.css
+++ b/css/css_base.css
@@ -296,6 +296,9 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones {
 .paso_02 .cont_direccion .direccion_opciones .dir_op .stitle {
   display: block;
 }
+.paso_02 .cont_direccion .direccion_opciones .dir_op .alert {
+  display: none;
+}
 .paso_02a .cont_direccion {
   height: 100%;
 }
