--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -401,6 +401,8 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 .cont_direccion .direccion_op1 .dir_locales .cont_local .accioness {
   right: 10px;
   width: 36px;
+  background: #fff;
+  padding: 5px;
 }
 .cont_direccion .direccion_op1 .dir_locales .cont_local .accion {
   height: 36px;
