--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -395,7 +395,9 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   display: none;
 }
 .cont_direccion .direccion_op1 .dir_locales .cont_local .left_acciones {
-  
+  width: calc(100% - 65px);
+  height: 100%;
+  position: relative;
 }
 .cont_direccion .direccion_op1 .dir_locales .cont_local .left_acciones .local_info {
   width: 100%
