--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -395,12 +395,13 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   display: none;
 }
 .cont_direccion .direccion_op1 .dir_locales .cont_local .left_acciones {
-  width: calc(100% - 65px);
+  width: calc(100% - 75px);
   height: 100%;
-  position: relative;
+  position: absolute;
+  padding-left: 10px;
 }
 .cont_direccion .direccion_op1 .dir_locales .cont_local .left_acciones .local_info {
-  width: 100%
+  width: 100%;
 }
 .cont_direccion .direccion_op1 .dir_locales .cont_local .accioness {
   right: 10px;
