--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -259,6 +259,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 }
 .modal_error .cont_modal .cont_info .cont_err .cont_ab_err{
   left: 0px;
+  width: 100%;
 }
 .modal_error .cont_modal .cont_info .cont_err .cont_ab_err .titulo_error{
   display: block;
