--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -390,7 +390,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   height: 100%;
   position: relative;
 }
-.cont_direccion .direccion_op1 .dir_locales .dir_map {
+.cont_direccion .direccion_op1 .dir_map {
   width: 100%;
   height: 100px;
   display: none;
