--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -393,9 +393,10 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   position: relative;
 }
 .cont_direccion .direccion_op1 .dir_map {
-  width: 100%;
-  height: 180px;
+  width: calc(100% - 20px);
+  height: 160px;
   display: none;
+  margin: 10px;
 }
 .cont_direccion .direccion_op1 .dir_locales .cont_local .left_acciones {
   width: calc(100% - 75px);
