--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -393,8 +393,8 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   position: relative;
 }
 .cont_direccion .direccion_op1 .cont_map {
-  padding: 10px;
-  background: #fff;
+  padding: 6px;
+  background: #ccc;
   display: none;
 }
 .cont_direccion .direccion_op1 .cont_map .dir_map {
