--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -412,9 +412,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 }
 .cont_direccion .direccion_op1 .dir_locales .cont_local .accioness {
   right: 10px;
-  width: 35px;
-  background: #eee;
-  padding: 5px;
+  min-width: 35px;
 }
 .cont_direccion .direccion_op1 .dir_locales .cont_local .accion {
   height: 36px;
