--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -413,12 +413,14 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 .cont_direccion .direccion_op1 .dir_locales .cont_local .accioness {
   right: 10px;
   min-width: 35px;
+  height: 100%;
 }
 .cont_direccion .direccion_op1 .dir_locales .cont_local .accion {
-  height: 36px;
+  height: 33.33%;
   width: 36px;
   display: block;
-  margin: 1px 0px;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 .cont_direccion .direccion_op1 .dir_locales .cont_local .local_info .alert {
   color: #D00;
