--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -62,6 +62,23 @@ body .contenedor .modals .cont_modals .modal .cont_modal .close {
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal {
   padding-top: 80px;
 }
+body .contenedor .modals .cont_modals .modal_contacto .cont_modal .cont_info .info_modal .cont_final{
+  padding: 5%;
+}
+body .contenedor .modals .cont_modals .modal_contacto .cont_modal .cont_info .info_modal .cont_final .input_contacto{
+  
+}
+body .contenedor .modals .cont_modals .modal_contacto .cont_modal .cont_info .info_modal .cont_final .input_contacto h1{
+  padding-bottom: 2px;
+}
+body .contenedor .modals .cont_modals .modal_contacto .cont_modal .cont_info .info_modal .cont_final .input_contacto .d_input{
+  
+}
+body .contenedor .modals .cont_modals .modal_contacto .cont_modal .cont_info .info_modal .cont_final .input_contacto .d_input input{
+  width: 100%;
+  height: 30px;
+  border: 0px;
+}
 body .contenedor .modals .cont_modals .modal .cont_modal .sub_total {
   bottom: 51px;
   left: 0px;
