--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -79,8 +79,11 @@ body .contenedor .modals .cont_modals .modal_contacto .cont_modal .cont_info .in
   height: 30px;
   border: 0px;
 }
+body .contenedor .modals .cont_modals .modal_contacto .cont_modal .cont_info .info_modal .cont_final .input_enviar{
+  padding-top: 3px;
+}
 body .contenedor .modals .cont_modals .modal_contacto .cont_modal .cont_info .info_modal .cont_final .input_enviar input{
-  padding: 5px 15px;
+  padding: 4px 17px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .sub_total {
   bottom: 51px;
