--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -147,9 +147,9 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .pro_foto {
   position: absolute;
   right: 10px;
-  width: 70px;
-  width: 200px;
-  height: 200px;
+  top: 10px;
+  width: 60px;
+  height: 60px;
   background: #000;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_categorias {
