--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -127,27 +127,31 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   text-align: right;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 {
-  position: relative;
-  padding: 10px;
+  display: block;
   background: #ddd;
   margin-bottom: 5px;
 }
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .nombre {
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro {
+  position: relative;
+}
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .nombre {
+  position: absolute;
   padding-right: 80px;
 }
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .descripcion {
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .descripcion {
+  position: absolute;
   padding-right: 80px;
 }
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .precio {
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .precio {
   position: absolute;
   right: 10px;
   width: 70px;
   text-align: right;
 }
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .pro_foto {
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .pro_foto {
   position: absolute;
   right: 10px;
-  top: 10px;
+  top: 0px;
   width: 60px;
   height: 60px;
   background: #000;
