--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -133,6 +133,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro {
   position: relative;
+  min-height: 80px;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .nombre {
   position: absolute;
