--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -133,7 +133,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro {
   position: relative;
-  min-height: 80px;
+  min-height: 90px;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .nombre {
   position: absolute;
@@ -151,6 +151,12 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   position: absolute;
   right: 0px;
   top: 0px;
+  height: 100%;
+  background: #000;
+  padding: 10px;
+}
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .pro_foto .foto{
+  width: 100%;
   height: 100%;
   background: #000;
 }
