--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -128,12 +128,12 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 {
   display: block;
-  background: #ddd;
   margin-bottom: 5px;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro {
   position: relative;
   min-height: 90px;
+  background: #ddd;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .cont_data {
   position: absolute;
@@ -162,6 +162,11 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   height: calc(100% - 10px); 
   background: #000;
   margin: 5px;
+}
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .disponible {
+  color: #A33; 
+  font-size: 11px;
+  background: #fff;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_categorias {
   padding: 10px;
