--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -144,9 +144,9 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .cont_data .descripcion {
   display: block;
-  line-height: 13px;
+  line-height: 12px;
   overflow-y: auto;
-  max-height: 50px;
+  height: 45px;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .cont_data .precio {
   display: block;
