--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -140,16 +140,21 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .cont_data .nombre {
   display: block;
+  padding-left: 5px;
+  padding-top: 10px;
+  padding-bottom: 5px;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .cont_data .descripcion {
   display: block;
   line-height: 12px;
-  overflow-y: auto;
-  height: 45px;
+  padding-left: 5px;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .cont_data .precio {
   display: block;
   font-weight: bold;
+  padding-left: 5px;
+  padding-top: 5px;
+  padding-bottom: 10px;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .pro_foto {
   float: left;
