--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -130,41 +130,34 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   display: block;
   margin-bottom: 5px;
 }
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro {
-  position: relative;
-  min-height: 100px;
-  background: #ddd;
-}
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro table {
-  float: left;
-}
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .cont_data {
 
-}
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .cont_data .nombre {
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_data {
   display: block;
   padding-left: 5px;
   padding-top: 10px;
   padding-bottom: 5px;
 }
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .cont_data .descripcion {
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_data .nombre {
+  display: block;
+  padding-left: 5px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+}
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_data .descripcion {
   display: block;
   line-height: 12px;
   overflow-y: auto;
   min-height: 45px;
   padding-left: 5px;
 }
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .cont_data .precio {
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_data .precio {
   display: block;
   font-weight: bold;
   padding-left: 5px;
   padding-top: 5px;
   padding-bottom: 10px;
 }
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro {
-  float: left;
-}
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_pro .foto{
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .foto{
   background: #000;
   margin: 5px;
 }
