--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -133,9 +133,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_data {
   display: block;
-  padding-left: 5px;
-  padding-top: 10px;
-  padding-bottom: 5px;
+  background: #ddd;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_data .nombre {
   display: block;
