--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -130,10 +130,11 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   display: block;
   margin-bottom: 5px;
 }
-
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table{
+  background: #ddd;
+}
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_data {
   display: block;
-  background: #ddd;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_data .nombre {
   display: block;
