--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -156,7 +156,10 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
   background: #000;
   margin: 5px;
 }
-
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3 {
+  display: block;
+  margin-bottom: 5px;
+}
 .modal_carta .cont_modal .cont_info .info_modal .lista_categorias {
   padding: 10px;
 }
