--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -159,6 +159,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar {
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3 {
   display: block;
   margin-bottom: 5px;
+  background: #000;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_categorias {
   padding: 10px;
