--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -164,7 +164,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar{
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3 .cont_pr{
   display: block;
   width: 100%;
-  height: 100%;
+  min-height: 80px;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_categorias {
   padding: 10px;
