--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -133,28 +133,32 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar{
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table{
   background: #ddd;
 }
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_data{
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .cont_data{
   display: block;
 }
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_data .nombre{
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .cont_data .nombre{
   display: block;
   padding-left: 5px;
   padding-top: 5px;
 }
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_data .descripcion{
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .cont_data .descripcion{
   display: block;
   line-height: 12px;
   padding-left: 5px;
 }
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .cont_data .precio{
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .cont_data .precio{
   display: block;
   font-weight: bold;
   padding-left: 5px;
   padding-bottom: 5px;
 }
-.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 .foto{
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .foto{
   background: #000;
   margin: 5px;
+}
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .carro{
+  padding: 5px;
+  background: #ccc;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3{
   display: block;
