--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -160,6 +160,12 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar{
   padding: 5px;
   background: #ccc;
 }
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .carro .add_carro_btn{
+  float: left;
+}
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .carro .add_carro_alert{
+  float: left;
+}
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3{
   display: block;
   margin-bottom: 5px;
