--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -162,9 +162,11 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar{
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .carro .add_carro_btn{
   float: left;
+  background: #900;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .carro .add_carro_alert{
   float: left;
+  padding-left: 10px;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3{
   display: block;
