--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -171,12 +171,17 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar{
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .carro .add_carro_btn .add_info{
   display: block;
   padding-right: 50px;
+  font-size: 14px;
+  padding-left: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .carro .add_carro_btn .add_logo{
-  width: 30px;
-  height: 30px;
+  width: 24px;
+  height: 24px;
   background: #090;
   right: 5px;
+  font-size: 24;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .carro .add_carro_alert{
   float: left;
