--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -184,6 +184,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar{
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .carro .add_carro_alert{
   float: left;
   padding-left: 10px;
+  padding-top: 5px;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3{
   display: block;
