--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -186,6 +186,11 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar{
   padding-left: 10px;
   padding-top: 5px;
 }
+.modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .carro_no{
+  padding: 5px;
+  background: #ccc;
+  color: #900;
+}
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3{
   display: block;
   margin-bottom: 5px;
