--- a/css/css_tipo_01.css
+++ b/css/css_tipo_01.css
@@ -189,7 +189,9 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones .confirmar{
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table .carro_no{
   padding: 5px;
   background: #ccc;
-  color: #900;
+  color: #000;
+  color: #fff;
+  font-weight: bold;
 }
 .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3{
   display: block;
